Three variables calculations

--- a/simulation/CNT-SIM/2020-10-05-kenr-kbnr-diff.ipynb
+++ b/simulation/CNT-SIM/2020-10-05-kenr-kbnr-diff.ipynb
@@ -324,6 +324,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from itertools import compress\n",
     "\n",
     "# Bokeh imports\n",
     "from bokeh.io import output_notebook, show, save\n",
@@ -342,7 +343,7 @@
     "\n",
     "sys.path.append('../CNT-SIM/')\n",
     "from CNTSimFile import CNTSimFile\n",
-    "from mc_sim import exciton_sim_4_lvl_full_exchange, exciton_sim"
+    "from mc_sim import exciton_sim"
    ]
   },
   {
@@ -351,8 +352,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_er_per_s = 0.1e9\n",
-    "k_br_per_s = 0.1e9  # constant for radiativ decay from S11*\n",
+    "k_er_per_s = 1e8\n",
+    "k_br_per_s = 1e8  # constant for radiativ decay from S11*\n",
     "k_enr_per_s = 2e8 \n",
     "k_bnr_per_s = 4e8   # constant for non-radiativ decay from S11*\n",
     "\n",
@@ -362,7 +363,6 @@
     "# termal detrapping 10.1021/acs.jpclett.8b03732\n",
     "k_bd_per_s = 0.5 * (1e12 / 385 + 1e12 / 1132) + 0.1e12 * np.exp(-1.6182e-11 /\n",
     "                                                                (kB * 300))\n",
-    "\n",
     "k_dnr_per_s = 2e8\n",
     "\n",
     "kin_const_1 = np.array([k_br_per_s, k_er_per_s, k_bnr_per_s, k_enr_per_s, k_bd_per_s, k_ed_per_s,\n",
@@ -375,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exc_sim_rk_1 = CNTSimFile('../sim_output/2020-09-23-exciton_sim-rate-const.h5', kin_const_1)"
+    "exc_sim_ker_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-05-exciton_sim-kenr_kbnr_diff_prist_3.h5', kin_const_1)"
    ]
   },
   {
@@ -384,173 +384,58 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "constants_array = np.zeros((10, 1))"
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15, 1.07e16, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3, 1.07e16/3, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(2e8, 1e7, 10)\n",
+    "constants_array[:, 1] = np.linspace(4e8, 4e9, 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array[:, 0] = np.linspace(1e8, 3e8, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-09-24 09:46:36.789746\n",
-      "Start of exiton simulation: 2020-09-24 09:46:36.791375\n",
-      "End exiton simulation: 2020-09-24 09:54:45.089123\n",
-      "Elapsed time: 00:08:08\n",
+      "Start of calculation: 2020-10-05 14:47:55.560736\n",
+      "Start of exiton simulation: 2020-10-05 14:47:55.562863\n",
+      "End exiton simulation: 2020-10-05 14:49:35.738555\n",
+      "Elapsed time: 00:01:40\n",
       "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 09:54:45.098466\n",
-      "End exiton simulation: 2020-09-24 10:03:18.851874\n",
-      "Elapsed time: 00:08:33\n",
+      "Start of exiton simulation: 2020-10-05 14:49:35.741507\n",
+      "End exiton simulation: 2020-10-05 14:51:30.928507\n",
+      "Elapsed time: 00:01:55\n",
       "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:03:18.855898\n",
-      "End exiton simulation: 2020-09-24 10:11:44.324654\n",
-      "Elapsed time: 00:08:25\n",
-      "rate constant set processed((2/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:11:44.329979\n",
-      "End exiton simulation: 2020-09-24 10:19:56.068064\n",
-      "Elapsed time: 00:08:11\n",
-      "rate constant set processed((3/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:19:56.072034\n",
-      "End exiton simulation: 2020-09-24 10:28:08.035895\n",
-      "Elapsed time: 00:08:11\n",
-      "rate constant set processed((4/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:28:08.040074\n",
-      "End exiton simulation: 2020-09-24 10:36:20.920238\n",
-      "Elapsed time: 00:08:12\n",
-      "rate constant set processed((5/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:36:20.924288\n",
-      "End exiton simulation: 2020-09-24 10:44:43.779390\n",
-      "Elapsed time: 00:08:22\n",
-      "rate constant set processed((6/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:44:43.783753\n",
-      "End exiton simulation: 2020-09-24 10:52:58.978485\n",
-      "Elapsed time: 00:08:15\n",
-      "rate constant set processed((7/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:52:58.982172\n",
-      "End exiton simulation: 2020-09-24 11:01:05.825061\n",
-      "Elapsed time: 00:08:06\n",
-      "rate constant set processed((8/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 11:01:05.829604\n",
-      "End exiton simulation: 2020-09-24 11:09:11.499233\n",
-      "Elapsed time: 00:08:05\n",
-      "rate constant set processed((9/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 11:09:11.505307\n",
-      "End exiton simulation: 2020-09-24 11:17:19.117923\n",
-      "Elapsed time: 00:08:07\n",
-      "End exiton simulation: 2020-09-24 11:17:19.121581\n",
-      "Elapsed time: 01:30:42\n"
+      "Start of exiton simulation: 2020-10-05 14:51:30.935603\n"
      ]
-    }
-   ],
-   "source": [
-    "exc_sim_rk_1.rate_const_dependence(10000, exciton_sim, constants_array, ['k_enr'],\n",
-    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exc_sim_rk_1.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exc_sim_rk_2 = CNTSimFile('../sim_output/2020-09-23-exciton_sim-rate-const_2.h5', kin_const_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array[:, 0] = np.linspace(1e8, 1e9, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
+    },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start of calculation: 2020-09-24 14:02:41.123801\n",
-      "Start of exiton simulation: 2020-09-24 14:02:41.124620\n",
-      "End exiton simulation: 2020-09-24 14:10:57.170516\n",
-      "Elapsed time: 00:08:16\n",
-      "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:10:57.175489\n",
-      "End exiton simulation: 2020-09-24 14:19:19.189468\n",
-      "Elapsed time: 00:08:22\n",
-      "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:19:19.190950\n",
-      "End exiton simulation: 2020-09-24 14:27:49.266804\n",
-      "Elapsed time: 00:08:30\n",
-      "rate constant set processed((2/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:27:49.270660\n",
-      "End exiton simulation: 2020-09-24 14:36:05.950057\n",
-      "Elapsed time: 00:08:16\n",
-      "rate constant set processed((3/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:36:05.953807\n",
-      "End exiton simulation: 2020-09-24 14:44:17.787515\n",
-      "Elapsed time: 00:08:11\n",
-      "rate constant set processed((4/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:44:17.791861\n",
-      "End exiton simulation: 2020-09-24 14:52:20.788519\n",
-      "Elapsed time: 00:08:02\n",
-      "rate constant set processed((5/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:52:20.792601\n",
-      "End exiton simulation: 2020-09-24 15:00:22.304219\n",
-      "Elapsed time: 00:08:01\n",
-      "rate constant set processed((6/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:00:22.308375\n",
-      "End exiton simulation: 2020-09-24 15:08:31.632582\n",
-      "Elapsed time: 00:08:09\n",
-      "rate constant set processed((7/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:08:31.634025\n",
-      "End exiton simulation: 2020-09-24 15:16:36.436064\n",
-      "Elapsed time: 00:08:04\n",
-      "rate constant set processed((8/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:16:36.437619\n",
-      "End exiton simulation: 2020-09-24 15:24:39.706434\n",
-      "Elapsed time: 00:08:03\n",
-      "rate constant set processed((9/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:24:39.707866\n",
-      "End exiton simulation: 2020-09-24 15:32:50.777309\n",
-      "Elapsed time: 00:08:11\n",
-      "End exiton simulation: 2020-09-24 15:32:50.778720\n",
-      "Elapsed time: 01:30:09\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-40d7f51e9c14>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m                                    \u001b[0;34m[\u001b[0m\u001b[0;34m'k_br'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_er'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_bnr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_enr'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_be'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_ed'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_de'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'k_dnr'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m                                     \u001b[0mdiff_const\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;36m1.07e15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.07e15\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m                                    {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mexc_sim_ker_kbnr_diff_1\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/CNT-MC/simulation/CNT-SIM/CNTSimFile.py\u001b[0m in \u001b[0;36mparameter_dependence\u001b[0;34m(self, n_photons, func, constant_dependence, chosen_const, constant_names, diff_const, ref_diff_const, func_kwargs, plot)\u001b[0m\n\u001b[1;32m    571\u001b[0m                     {'Diff_exc_e': diff_const[i, 0],\n\u001b[1;32m    572\u001b[0m                      \u001b[0;34m'Diff_exc_d'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdiff_const\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 573\u001b[0;31m                      **func_kwargs})\n\u001b[0m\u001b[1;32m    574\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQY_delta\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQY\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQY_ref\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQY_ref\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    575\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/CNT-MC/simulation/CNT-SIM/CNTSimFile.py\u001b[0m in \u001b[0;36mphotons_fate\u001b[0;34m(self, n_photons, func, rate_const, func_kwargs)\u001b[0m\n\u001b[1;32m    137\u001b[0m         \u001b[0;31m# loop for the desired number of photons\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    138\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mp\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn_photons\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 139\u001b[0;31m             \u001b[0mphotons_fate\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrate_const\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mrate_const\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mfunc_kwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    140\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnotebook_output\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    141\u001b[0m                 \u001b[0minfo\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"Processing photon ({p+2}/ {n_photons})\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/CNT-MC/simulation/CNT-SIM/mc_sim.py\u001b[0m in \u001b[0;36mexciton_sim\u001b[0;34m(t_step, rate_const, Diff_exc_e, Diff_exc_d, n_defects, CNT_length, r_exc_nm, alpha)\u001b[0m\n\u001b[1;32m    483\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    484\u001b[0m             p_fate = np.array([e * random.uniform(0, 1)\n\u001b[0;32m--> 485\u001b[0;31m                                for e in constants[8:]])\n\u001b[0m\u001b[1;32m    486\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    487\u001b[0m             \u001b[0;31m# Store result for highest probability\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/projects/CNT-MC/simulation/CNT-SIM/mc_sim.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    482\u001b[0m         \u001b[0;31m# fate of dark exciton\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    483\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 484\u001b[0;31m             p_fate = np.array([e * random.uniform(0, 1)\n\u001b[0m\u001b[1;32m    485\u001b[0m                                for e in constants[8:]])\n\u001b[1;32m    486\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
-    "exc_sim_rk_2.rate_const_dependence(10000, exciton_sim, constants_array, ['k_enr'],\n",
+    "exc_sim_ker_kbnr_diff_1.parameter_dependence(100000, exciton_sim, constants_array, ['k_enr', 'k_bnr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})"
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_1.save()"
    ]
   },
   {
