--- a/simulation/sim_notebooks/2020-10-01-higher-kbnr.ipynb
+++ b/simulation/sim_notebooks/2020-10-01-higher-kbnr.ipynb
@@ -324,6 +324,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from itertools import compress\n",
     "\n",
     "# Bokeh imports\n",
     "from bokeh.io import output_notebook, show, save\n",
@@ -342,7 +343,7 @@
     "\n",
     "sys.path.append('../CNT-SIM/')\n",
     "from CNTSimFile import CNTSimFile\n",
-    "from mc_sim import exciton_sim_4_lvl_full_exchange, exciton_sim"
+    "from mc_sim import exciton_sim"
    ]
   },
   {
@@ -351,8 +352,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_er_per_s = 0.1e9\n",
-    "k_br_per_s = 0.1e9  # constant for radiativ decay from S11*\n",
+    "k_er_per_s = 1e8\n",
+    "k_br_per_s = 1e8  # constant for radiativ decay from S11*\n",
     "k_enr_per_s = 2e8 \n",
     "k_bnr_per_s = 4e8   # constant for non-radiativ decay from S11*\n",
     "\n",
@@ -362,7 +363,6 @@
     "# termal detrapping 10.1021/acs.jpclett.8b03732\n",
     "k_bd_per_s = 0.5 * (1e12 / 385 + 1e12 / 1132) + 0.1e12 * np.exp(-1.6182e-11 /\n",
     "                                                                (kB * 300))\n",
-    "\n",
     "k_dnr_per_s = 2e8\n",
     "\n",
     "kin_const_1 = np.array([k_br_per_s, k_er_per_s, k_bnr_per_s, k_enr_per_s, k_bd_per_s, k_ed_per_s,\n",
@@ -373,184 +373,152 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Start of calculation: 2020-10-02 07:54:52.523625\n",
+      "Start of exiton simulation: 2020-10-02 07:54:52.523999\n",
+      "End exiton simulation: 2020-10-02 07:56:33.193902\n",
+      "Elapsed time: 00:01:40\n",
+      "rate constant set processed((0/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 07:56:33.206624\n",
+      "End exiton simulation: 2020-10-02 07:58:30.507363\n",
+      "Elapsed time: 00:01:57\n",
+      "rate constant set processed((1/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 07:58:30.515320\n",
+      "End exiton simulation: 2020-10-02 07:59:53.417934\n",
+      "Elapsed time: 00:01:22\n",
+      "rate constant set processed((2/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 07:59:53.428077\n",
+      "End exiton simulation: 2020-10-02 08:01:04.236437\n",
+      "Elapsed time: 00:01:10\n",
+      "rate constant set processed((3/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 08:01:04.241655\n",
+      "End exiton simulation: 2020-10-02 08:02:11.879100\n",
+      "Elapsed time: 00:01:07\n",
+      "rate constant set processed((4/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 08:02:11.881961\n",
+      "End exiton simulation: 2020-10-02 08:03:11.002548\n",
+      "Elapsed time: 00:00:59\n",
+      "rate constant set processed((5/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 08:03:11.008015\n",
+      "End exiton simulation: 2020-10-02 08:04:05.864432\n",
+      "Elapsed time: 00:00:54\n",
+      "rate constant set processed((6/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 08:04:05.871262\n",
+      "End exiton simulation: 2020-10-02 08:04:57.096053\n",
+      "Elapsed time: 00:00:51\n",
+      "rate constant set processed((7/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 08:04:57.101592\n",
+      "End exiton simulation: 2020-10-02 08:05:46.104365\n",
+      "Elapsed time: 00:00:49\n",
+      "rate constant set processed((8/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 08:05:46.107153\n",
+      "End exiton simulation: 2020-10-02 08:06:33.926541\n",
+      "Elapsed time: 00:00:47\n",
+      "rate constant set processed((9/ 10))\n",
+      "Start of exiton simulation: 2020-10-02 08:06:33.929664\n",
+      "End exiton simulation: 2020-10-02 08:07:20.462417\n",
+      "Elapsed time: 00:00:46\n",
+      "End exiton simulation: 2020-10-02 08:07:20.488725\n",
+      "Elapsed time: 00:12:27\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../CNT-SIM/CNTSimFile.py:574: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  self.QY_delta = (self.QY - self.QY_ref) / self.QY_ref\n"
+     ]
+    }
+   ],
    "source": [
-    "exc_sim_rk_1 = CNTSimFile('../sim_output/2020-09-23-exciton_sim-rate-const.h5', kin_const_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array = np.zeros((10, 1))"
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15,1.5e16, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3,1.5e16/3, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(1e8, 1e9, 10)\n",
+    "constants_array[:, 1] = np.linspace(4e8, 4e10, 10)\n",
+    "\n",
+    "exc_sim_ker_kbnr_diff_5 = CNTSimFile('../sim_output/2020-10-01-exciton_sim-ker_kbnr_diff_prist_5.h5',\n",
+    "                                     kin_const_1)\n",
+    "exc_sim_ker_kbnr_diff_5.parameter_dependence(100000, exciton_sim, constants_array, ['k_er', 'k_bnr'],\n",
+    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_5.save()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array[:, 0] = np.linspace(1e8, 3e8, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-09-24 09:46:36.789746\n",
-      "Start of exiton simulation: 2020-09-24 09:46:36.791375\n",
-      "End exiton simulation: 2020-09-24 09:54:45.089123\n",
-      "Elapsed time: 00:08:08\n",
+      "Start of calculation: 2020-10-02 09:12:47.148678\n",
+      "Start of exiton simulation: 2020-10-02 09:12:47.148948\n",
+      "End exiton simulation: 2020-10-02 09:23:47.067073\n",
+      "Elapsed time: 00:10:59\n",
       "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 09:54:45.098466\n",
-      "End exiton simulation: 2020-09-24 10:03:18.851874\n",
-      "Elapsed time: 00:08:33\n",
+      "Start of exiton simulation: 2020-10-02 09:23:47.069877\n",
+      "End exiton simulation: 2020-10-02 09:34:33.317238\n",
+      "Elapsed time: 00:10:46\n",
       "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:03:18.855898\n",
-      "End exiton simulation: 2020-09-24 10:11:44.324654\n",
-      "Elapsed time: 00:08:25\n",
+      "Start of exiton simulation: 2020-10-02 09:34:33.323282\n",
+      "End exiton simulation: 2020-10-02 09:36:19.572746\n",
+      "Elapsed time: 00:01:46\n",
       "rate constant set processed((2/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:11:44.329979\n",
-      "End exiton simulation: 2020-09-24 10:19:56.068064\n",
-      "Elapsed time: 00:08:11\n",
+      "Start of exiton simulation: 2020-10-02 09:36:19.576186\n",
+      "End exiton simulation: 2020-10-02 09:37:47.833710\n",
+      "Elapsed time: 00:01:28\n",
       "rate constant set processed((3/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:19:56.072034\n",
-      "End exiton simulation: 2020-09-24 10:28:08.035895\n",
-      "Elapsed time: 00:08:11\n",
+      "Start of exiton simulation: 2020-10-02 09:37:47.844263\n",
+      "End exiton simulation: 2020-10-02 09:39:12.938997\n",
+      "Elapsed time: 00:01:25\n",
       "rate constant set processed((4/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:28:08.040074\n",
-      "End exiton simulation: 2020-09-24 10:36:20.920238\n",
-      "Elapsed time: 00:08:12\n",
+      "Start of exiton simulation: 2020-10-02 09:39:12.951408\n",
+      "End exiton simulation: 2020-10-02 09:40:35.639043\n",
+      "Elapsed time: 00:01:22\n",
       "rate constant set processed((5/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:36:20.924288\n",
-      "End exiton simulation: 2020-09-24 10:44:43.779390\n",
-      "Elapsed time: 00:08:22\n",
+      "Start of exiton simulation: 2020-10-02 09:40:35.644387\n",
+      "End exiton simulation: 2020-10-02 09:41:57.775437\n",
+      "Elapsed time: 00:01:22\n",
       "rate constant set processed((6/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:44:43.783753\n",
-      "End exiton simulation: 2020-09-24 10:52:58.978485\n",
-      "Elapsed time: 00:08:15\n",
+      "Start of exiton simulation: 2020-10-02 09:41:57.787097\n",
+      "End exiton simulation: 2020-10-02 09:43:17.631265\n",
+      "Elapsed time: 00:01:19\n",
       "rate constant set processed((7/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:52:58.982172\n",
-      "End exiton simulation: 2020-09-24 11:01:05.825061\n",
-      "Elapsed time: 00:08:06\n",
+      "Start of exiton simulation: 2020-10-02 09:43:17.641201\n",
+      "End exiton simulation: 2020-10-02 09:44:34.822704\n",
+      "Elapsed time: 00:01:17\n",
       "rate constant set processed((8/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 11:01:05.829604\n",
-      "End exiton simulation: 2020-09-24 11:09:11.499233\n",
-      "Elapsed time: 00:08:05\n",
+      "Start of exiton simulation: 2020-10-02 09:44:34.835168\n",
+      "End exiton simulation: 2020-10-02 09:45:50.679536\n",
+      "Elapsed time: 00:01:15\n",
       "rate constant set processed((9/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 11:09:11.505307\n",
-      "End exiton simulation: 2020-09-24 11:17:19.117923\n",
-      "Elapsed time: 00:08:07\n",
-      "End exiton simulation: 2020-09-24 11:17:19.121581\n",
-      "Elapsed time: 01:30:42\n"
+      "Start of exiton simulation: 2020-10-02 09:45:50.686269\n",
+      "End exiton simulation: 2020-10-02 09:47:08.024515\n",
+      "Elapsed time: 00:01:17\n",
+      "End exiton simulation: 2020-10-02 09:47:08.029703\n",
+      "Elapsed time: 00:34:20\n"
      ]
     }
    ],
    "source": [
-    "exc_sim_rk_1.rate_const_dependence(10000, exciton_sim, constants_array, ['k_enr'],\n",
+    "exc_sim_ker_kbnr_diff_6 = CNTSimFile('../sim_output/2020-10-01-exciton_sim-ker_kbnr_diff_defect_6.h5',\n",
+    "                                     kin_const_1)\n",
+    "exc_sim_ker_kbnr_diff_6.parameter_dependence(10000, exciton_sim, constants_array, ['k_er', 'k_bnr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exc_sim_rk_1.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exc_sim_rk_2 = CNTSimFile('../sim_output/2020-09-23-exciton_sim-rate-const_2.h5', kin_const_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array[:, 0] = np.linspace(1e8, 1e9, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start of calculation: 2020-09-24 14:02:41.123801\n",
-      "Start of exiton simulation: 2020-09-24 14:02:41.124620\n",
-      "End exiton simulation: 2020-09-24 14:10:57.170516\n",
-      "Elapsed time: 00:08:16\n",
-      "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:10:57.175489\n",
-      "End exiton simulation: 2020-09-24 14:19:19.189468\n",
-      "Elapsed time: 00:08:22\n",
-      "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:19:19.190950\n",
-      "End exiton simulation: 2020-09-24 14:27:49.266804\n",
-      "Elapsed time: 00:08:30\n",
-      "rate constant set processed((2/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:27:49.270660\n",
-      "End exiton simulation: 2020-09-24 14:36:05.950057\n",
-      "Elapsed time: 00:08:16\n",
-      "rate constant set processed((3/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:36:05.953807\n",
-      "End exiton simulation: 2020-09-24 14:44:17.787515\n",
-      "Elapsed time: 00:08:11\n",
-      "rate constant set processed((4/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:44:17.791861\n",
-      "End exiton simulation: 2020-09-24 14:52:20.788519\n",
-      "Elapsed time: 00:08:02\n",
-      "rate constant set processed((5/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:52:20.792601\n",
-      "End exiton simulation: 2020-09-24 15:00:22.304219\n",
-      "Elapsed time: 00:08:01\n",
-      "rate constant set processed((6/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:00:22.308375\n",
-      "End exiton simulation: 2020-09-24 15:08:31.632582\n",
-      "Elapsed time: 00:08:09\n",
-      "rate constant set processed((7/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:08:31.634025\n",
-      "End exiton simulation: 2020-09-24 15:16:36.436064\n",
-      "Elapsed time: 00:08:04\n",
-      "rate constant set processed((8/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:16:36.437619\n",
-      "End exiton simulation: 2020-09-24 15:24:39.706434\n",
-      "Elapsed time: 00:08:03\n",
-      "rate constant set processed((9/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:24:39.707866\n",
-      "End exiton simulation: 2020-09-24 15:32:50.777309\n",
-      "Elapsed time: 00:08:11\n",
-      "End exiton simulation: 2020-09-24 15:32:50.778720\n",
-      "Elapsed time: 01:30:09\n"
-     ]
-    }
-   ],
-   "source": [
-    "exc_sim_rk_2.rate_const_dependence(10000, exciton_sim, constants_array, ['k_enr'],\n",
-    "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})"
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_6.save()"
    ]
   },
   {
@@ -566,18 +534,6 @@
    "display_name": "CNT-MC",
    "language": "python",
    "name": "cnt-mc"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
