--- a/simulation/sim_notebooks/2020-10-01-higher-ker.ipynb
+++ b/simulation/sim_notebooks/2020-10-01-higher-ker.ipynb
@@ -324,6 +324,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from itertools import compress\n",
     "\n",
     "# Bokeh imports\n",
     "from bokeh.io import output_notebook, show, save\n",
@@ -342,7 +343,7 @@
     "\n",
     "sys.path.append('../CNT-SIM/')\n",
     "from CNTSimFile import CNTSimFile\n",
-    "from mc_sim import exciton_sim_4_lvl_full_exchange, exciton_sim"
+    "from mc_sim import exciton_sim"
    ]
   },
   {
@@ -351,8 +352,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_er_per_s = 0.1e9\n",
-    "k_br_per_s = 0.1e9  # constant for radiativ decay from S11*\n",
+    "k_er_per_s = 1e8\n",
+    "k_br_per_s = 1e8  # constant for radiativ decay from S11*\n",
     "k_enr_per_s = 2e8 \n",
     "k_bnr_per_s = 4e8   # constant for non-radiativ decay from S11*\n",
     "\n",
@@ -362,7 +363,6 @@
     "# termal detrapping 10.1021/acs.jpclett.8b03732\n",
     "k_bd_per_s = 0.5 * (1e12 / 385 + 1e12 / 1132) + 0.1e12 * np.exp(-1.6182e-11 /\n",
     "                                                                (kB * 300))\n",
-    "\n",
     "k_dnr_per_s = 2e8\n",
     "\n",
     "kin_const_1 = np.array([k_br_per_s, k_er_per_s, k_bnr_per_s, k_enr_per_s, k_bd_per_s, k_ed_per_s,\n",
@@ -375,182 +375,155 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exc_sim_rk_1 = CNTSimFile('../sim_output/2020-09-23-exciton_sim-rate-const.h5', kin_const_1)"
+    "exc_sim_ker_kbnr_diff_3 = CNTSimFile('../sim_output/2020-10-01-exciton_sim-ker_kbnr_diff_prist_3.h5',\n",
+    "                                     kin_const_1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array = np.zeros((10, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array[:, 0] = np.linspace(1e8, 3e8, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-09-24 09:46:36.789746\n",
-      "Start of exiton simulation: 2020-09-24 09:46:36.791375\n",
-      "End exiton simulation: 2020-09-24 09:54:45.089123\n",
-      "Elapsed time: 00:08:08\n",
+      "Start of calculation: 2020-10-02 07:47:42.325126\n",
+      "Start of exiton simulation: 2020-10-02 07:47:42.326356\n",
+      "End exiton simulation: 2020-10-02 07:49:19.300370\n",
+      "Elapsed time: 00:01:36\n",
       "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 09:54:45.098466\n",
-      "End exiton simulation: 2020-09-24 10:03:18.851874\n",
-      "Elapsed time: 00:08:33\n",
+      "Start of exiton simulation: 2020-10-02 07:49:19.306006\n",
+      "End exiton simulation: 2020-10-02 07:51:12.704067\n",
+      "Elapsed time: 00:01:53\n",
       "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:03:18.855898\n",
-      "End exiton simulation: 2020-09-24 10:11:44.324654\n",
-      "Elapsed time: 00:08:25\n",
+      "Start of exiton simulation: 2020-10-02 07:51:12.709144\n",
+      "End exiton simulation: 2020-10-02 07:52:31.481473\n",
+      "Elapsed time: 00:01:18\n",
       "rate constant set processed((2/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:11:44.329979\n",
-      "End exiton simulation: 2020-09-24 10:19:56.068064\n",
-      "Elapsed time: 00:08:11\n",
+      "Start of exiton simulation: 2020-10-02 07:52:31.485736\n",
+      "End exiton simulation: 2020-10-02 07:53:38.732680\n",
+      "Elapsed time: 00:01:07\n",
       "rate constant set processed((3/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:19:56.072034\n",
-      "End exiton simulation: 2020-09-24 10:28:08.035895\n",
-      "Elapsed time: 00:08:11\n",
+      "Start of exiton simulation: 2020-10-02 07:53:38.734920\n",
+      "End exiton simulation: 2020-10-02 07:54:39.044232\n",
+      "Elapsed time: 00:01:00\n",
       "rate constant set processed((4/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:28:08.040074\n",
-      "End exiton simulation: 2020-09-24 10:36:20.920238\n",
-      "Elapsed time: 00:08:12\n",
+      "Start of exiton simulation: 2020-10-02 07:54:39.049068\n",
+      "End exiton simulation: 2020-10-02 07:55:35.971344\n",
+      "Elapsed time: 00:00:56\n",
       "rate constant set processed((5/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:36:20.924288\n",
-      "End exiton simulation: 2020-09-24 10:44:43.779390\n",
-      "Elapsed time: 00:08:22\n",
+      "Start of exiton simulation: 2020-10-02 07:55:35.973467\n",
+      "End exiton simulation: 2020-10-02 07:56:29.722955\n",
+      "Elapsed time: 00:00:53\n",
       "rate constant set processed((6/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:44:43.783753\n",
-      "End exiton simulation: 2020-09-24 10:52:58.978485\n",
-      "Elapsed time: 00:08:15\n",
+      "Start of exiton simulation: 2020-10-02 07:56:29.725381\n",
+      "End exiton simulation: 2020-10-02 07:57:21.298872\n",
+      "Elapsed time: 00:00:51\n",
       "rate constant set processed((7/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:52:58.982172\n",
-      "End exiton simulation: 2020-09-24 11:01:05.825061\n",
-      "Elapsed time: 00:08:06\n",
+      "Start of exiton simulation: 2020-10-02 07:57:21.301367\n",
+      "End exiton simulation: 2020-10-02 07:58:10.353600\n",
+      "Elapsed time: 00:00:49\n",
       "rate constant set processed((8/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 11:01:05.829604\n",
-      "End exiton simulation: 2020-09-24 11:09:11.499233\n",
-      "Elapsed time: 00:08:05\n",
+      "Start of exiton simulation: 2020-10-02 07:58:10.366280\n",
+      "End exiton simulation: 2020-10-02 07:58:57.219224\n",
+      "Elapsed time: 00:00:46\n",
       "rate constant set processed((9/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 11:09:11.505307\n",
-      "End exiton simulation: 2020-09-24 11:17:19.117923\n",
-      "Elapsed time: 00:08:07\n",
-      "End exiton simulation: 2020-09-24 11:17:19.121581\n",
-      "Elapsed time: 01:30:42\n"
+      "Start of exiton simulation: 2020-10-02 07:58:57.224168\n",
+      "End exiton simulation: 2020-10-02 07:59:43.220334\n",
+      "Elapsed time: 00:00:45\n",
+      "End exiton simulation: 2020-10-02 07:59:43.239294\n",
+      "Elapsed time: 00:12:00\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../CNT-SIM/CNTSimFile.py:574: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  self.QY_delta = (self.QY - self.QY_ref) / self.QY_ref\n"
      ]
     }
    ],
    "source": [
-    "exc_sim_rk_1.rate_const_dependence(10000, exciton_sim, constants_array, ['k_enr'],\n",
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15,1.5e16, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3,1.5e16/3, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(1e8, 1e10, 10)\n",
+    "constants_array[:, 1] = np.linspace(4e8, 4e9, 10)\n",
+    "\n",
+    "\n",
+    "exc_sim_ker_kbnr_diff_3.parameter_dependence(100000, exciton_sim, constants_array, ['k_er', 'k_bnr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})"
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_3.save()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exc_sim_rk_1.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exc_sim_rk_2 = CNTSimFile('../sim_output/2020-09-23-exciton_sim-rate-const_2.h5', kin_const_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array[:, 0] = np.linspace(1e8, 1e9, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-09-24 14:02:41.123801\n",
-      "Start of exiton simulation: 2020-09-24 14:02:41.124620\n",
-      "End exiton simulation: 2020-09-24 14:10:57.170516\n",
-      "Elapsed time: 00:08:16\n",
+      "Start of calculation: 2020-10-02 09:12:30.748836\n",
+      "Start of exiton simulation: 2020-10-02 09:12:30.749121\n",
+      "End exiton simulation: 2020-10-02 09:23:27.127597\n",
+      "Elapsed time: 00:10:56\n",
       "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:10:57.175489\n",
-      "End exiton simulation: 2020-09-24 14:19:19.189468\n",
-      "Elapsed time: 00:08:22\n",
+      "Start of exiton simulation: 2020-10-02 09:23:27.132335\n",
+      "End exiton simulation: 2020-10-02 09:34:37.798730\n",
+      "Elapsed time: 00:11:10\n",
       "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:19:19.190950\n",
-      "End exiton simulation: 2020-09-24 14:27:49.266804\n",
-      "Elapsed time: 00:08:30\n",
+      "Start of exiton simulation: 2020-10-02 09:34:37.800991\n",
+      "End exiton simulation: 2020-10-02 09:42:23.419494\n",
+      "Elapsed time: 00:07:45\n",
       "rate constant set processed((2/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:27:49.270660\n",
-      "End exiton simulation: 2020-09-24 14:36:05.950057\n",
-      "Elapsed time: 00:08:16\n",
+      "Start of exiton simulation: 2020-10-02 09:42:23.435550\n",
+      "End exiton simulation: 2020-10-02 09:47:30.505065\n",
+      "Elapsed time: 00:05:07\n",
       "rate constant set processed((3/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:36:05.953807\n",
-      "End exiton simulation: 2020-09-24 14:44:17.787515\n",
-      "Elapsed time: 00:08:11\n",
+      "Start of exiton simulation: 2020-10-02 09:47:30.522277\n",
+      "End exiton simulation: 2020-10-02 09:50:31.346875\n",
+      "Elapsed time: 00:03:00\n",
       "rate constant set processed((4/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:44:17.791861\n",
-      "End exiton simulation: 2020-09-24 14:52:20.788519\n",
-      "Elapsed time: 00:08:02\n",
+      "Start of exiton simulation: 2020-10-02 09:50:31.352044\n",
+      "End exiton simulation: 2020-10-02 09:52:48.559045\n",
+      "Elapsed time: 00:02:17\n",
       "rate constant set processed((5/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:52:20.792601\n",
-      "End exiton simulation: 2020-09-24 15:00:22.304219\n",
-      "Elapsed time: 00:08:01\n",
+      "Start of exiton simulation: 2020-10-02 09:52:48.561340\n",
+      "End exiton simulation: 2020-10-02 09:54:48.425218\n",
+      "Elapsed time: 00:01:59\n",
       "rate constant set processed((6/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:00:22.308375\n",
-      "End exiton simulation: 2020-09-24 15:08:31.632582\n",
-      "Elapsed time: 00:08:09\n",
+      "Start of exiton simulation: 2020-10-02 09:54:48.427417\n",
+      "End exiton simulation: 2020-10-02 09:56:36.460751\n",
+      "Elapsed time: 00:01:48\n",
       "rate constant set processed((7/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:08:31.634025\n",
-      "End exiton simulation: 2020-09-24 15:16:36.436064\n",
-      "Elapsed time: 00:08:04\n",
+      "Start of exiton simulation: 2020-10-02 09:56:36.465289\n",
+      "End exiton simulation: 2020-10-02 09:58:16.043359\n",
+      "Elapsed time: 00:01:39\n",
       "rate constant set processed((8/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:16:36.437619\n",
-      "End exiton simulation: 2020-09-24 15:24:39.706434\n",
-      "Elapsed time: 00:08:03\n",
+      "Start of exiton simulation: 2020-10-02 09:58:16.048619\n",
+      "End exiton simulation: 2020-10-02 09:59:47.699012\n",
+      "Elapsed time: 00:01:31\n",
       "rate constant set processed((9/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:24:39.707866\n",
-      "End exiton simulation: 2020-09-24 15:32:50.777309\n",
-      "Elapsed time: 00:08:11\n",
-      "End exiton simulation: 2020-09-24 15:32:50.778720\n",
-      "Elapsed time: 01:30:09\n"
+      "Start of exiton simulation: 2020-10-02 09:59:47.708843\n"
      ]
     }
    ],
    "source": [
-    "exc_sim_rk_2.rate_const_dependence(10000, exciton_sim, constants_array, ['k_enr'],\n",
+    "exc_sim_ker_kbnr_diff_4 = CNTSimFile('../sim_output/2020-10-01-exciton_sim-ker_kbnr_diff_defect_4.h5',\n",
+    "                                     kin_const_1)\n",
+    "exc_sim_ker_kbnr_diff_4.parameter_dependence(10000, exciton_sim, constants_array, ['k_er', 'k_bnr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})"
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_4.save()"
    ]
   },
   {
@@ -566,18 +539,6 @@
    "display_name": "CNT-MC",
    "language": "python",
    "name": "cnt-mc"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
