--- a/simulation/sim_notebooks/2020-10-04-ker-kbnr-diff.ipynb
+++ b/simulation/sim_notebooks/2020-10-04-ker-kbnr-diff.ipynb
@@ -324,6 +324,7 @@
     "\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from itertools import compress\n",
     "\n",
     "# Bokeh imports\n",
     "from bokeh.io import output_notebook, show, save\n",
@@ -342,7 +343,7 @@
     "\n",
     "sys.path.append('../CNT-SIM/')\n",
     "from CNTSimFile import CNTSimFile\n",
-    "from mc_sim import exciton_sim_4_lvl_full_exchange, exciton_sim"
+    "from mc_sim import exciton_sim"
    ]
   },
   {
@@ -351,8 +352,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "k_er_per_s = 0.1e9\n",
-    "k_br_per_s = 0.1e9  # constant for radiativ decay from S11*\n",
+    "k_er_per_s = 1e8\n",
+    "k_br_per_s = 1e8  # constant for radiativ decay from S11*\n",
     "k_enr_per_s = 2e8 \n",
     "k_bnr_per_s = 4e8   # constant for non-radiativ decay from S11*\n",
     "\n",
@@ -362,7 +363,6 @@
     "# termal detrapping 10.1021/acs.jpclett.8b03732\n",
     "k_bd_per_s = 0.5 * (1e12 / 385 + 1e12 / 1132) + 0.1e12 * np.exp(-1.6182e-11 /\n",
     "                                                                (kB * 300))\n",
-    "\n",
     "k_dnr_per_s = 2e8\n",
     "\n",
     "kin_const_1 = np.array([k_br_per_s, k_er_per_s, k_bnr_per_s, k_enr_per_s, k_bd_per_s, k_ed_per_s,\n",
@@ -375,7 +375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exc_sim_rk_1 = CNTSimFile('../sim_output/2020-09-23-exciton_sim-rate-const.h5', kin_const_1)"
+    "exc_sim_ker_kbnr_diff_1 = CNTSimFile('../sim_output/2020-10-04-exciton_sim-ker_kbnr_diff_prist_1.h5', kin_const_1)"
    ]
   },
   {
@@ -384,82 +384,87 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "constants_array = np.zeros((10, 1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array[:, 0] = np.linspace(1e8, 3e8, 10)"
+    "diff_const = np.zeros((10, 2))\n",
+    "diff_const[:, 0] = np.linspace(1.07e15,1.5e16, 10)\n",
+    "diff_const[:, 1] = np.linspace(1.07e15/3,1.5e16/3, 10)\n",
+    "\n",
+    "constants_array = np.zeros((10, 2))\n",
+    "constants_array[:, 0] = np.linspace(1e8, 5e8, 10)\n",
+    "constants_array[:, 1] = np.linspace(4e8, 8e8, 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-09-24 09:46:36.789746\n",
-      "Start of exiton simulation: 2020-09-24 09:46:36.791375\n",
-      "End exiton simulation: 2020-09-24 09:54:45.089123\n",
-      "Elapsed time: 00:08:08\n",
+      "Start of calculation: 2020-10-04 10:52:07.210200\n",
+      "Start of exiton simulation: 2020-10-04 10:52:07.211357\n",
+      "End exiton simulation: 2020-10-04 10:53:44.445022\n",
+      "Elapsed time: 00:01:37\n",
       "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 09:54:45.098466\n",
-      "End exiton simulation: 2020-09-24 10:03:18.851874\n",
-      "Elapsed time: 00:08:33\n",
+      "Start of exiton simulation: 2020-10-04 10:53:44.450881\n",
+      "End exiton simulation: 2020-10-04 10:55:36.361108\n",
+      "Elapsed time: 00:01:51\n",
       "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:03:18.855898\n",
-      "End exiton simulation: 2020-09-24 10:11:44.324654\n",
-      "Elapsed time: 00:08:25\n",
+      "Start of exiton simulation: 2020-10-04 10:55:36.366473\n",
+      "End exiton simulation: 2020-10-04 10:56:55.053288\n",
+      "Elapsed time: 00:01:18\n",
       "rate constant set processed((2/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:11:44.329979\n",
-      "End exiton simulation: 2020-09-24 10:19:56.068064\n",
-      "Elapsed time: 00:08:11\n",
+      "Start of exiton simulation: 2020-10-04 10:56:55.055823\n",
+      "End exiton simulation: 2020-10-04 10:58:01.682609\n",
+      "Elapsed time: 00:01:06\n",
       "rate constant set processed((3/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:19:56.072034\n",
-      "End exiton simulation: 2020-09-24 10:28:08.035895\n",
-      "Elapsed time: 00:08:11\n",
+      "Start of exiton simulation: 2020-10-04 10:58:01.687472\n",
+      "End exiton simulation: 2020-10-04 10:59:00.745994\n",
+      "Elapsed time: 00:00:59\n",
       "rate constant set processed((4/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:28:08.040074\n",
-      "End exiton simulation: 2020-09-24 10:36:20.920238\n",
-      "Elapsed time: 00:08:12\n",
+      "Start of exiton simulation: 2020-10-04 10:59:00.748001\n",
+      "End exiton simulation: 2020-10-04 10:59:55.636294\n",
+      "Elapsed time: 00:00:54\n",
       "rate constant set processed((5/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:36:20.924288\n",
-      "End exiton simulation: 2020-09-24 10:44:43.779390\n",
-      "Elapsed time: 00:08:22\n",
+      "Start of exiton simulation: 2020-10-04 10:59:55.639625\n",
+      "End exiton simulation: 2020-10-04 11:00:46.969733\n",
+      "Elapsed time: 00:00:51\n",
       "rate constant set processed((6/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:44:43.783753\n",
-      "End exiton simulation: 2020-09-24 10:52:58.978485\n",
-      "Elapsed time: 00:08:15\n",
+      "Start of exiton simulation: 2020-10-04 11:00:46.975294\n",
+      "End exiton simulation: 2020-10-04 11:01:35.726022\n",
+      "Elapsed time: 00:00:48\n",
       "rate constant set processed((7/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 10:52:58.982172\n",
-      "End exiton simulation: 2020-09-24 11:01:05.825061\n",
-      "Elapsed time: 00:08:06\n",
+      "Start of exiton simulation: 2020-10-04 11:01:35.727698\n",
+      "End exiton simulation: 2020-10-04 11:02:23.616212\n",
+      "Elapsed time: 00:00:47\n",
       "rate constant set processed((8/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 11:01:05.829604\n",
-      "End exiton simulation: 2020-09-24 11:09:11.499233\n",
-      "Elapsed time: 00:08:05\n",
+      "Start of exiton simulation: 2020-10-04 11:02:23.619910\n",
+      "End exiton simulation: 2020-10-04 11:03:09.323955\n",
+      "Elapsed time: 00:00:45\n",
       "rate constant set processed((9/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 11:09:11.505307\n",
-      "End exiton simulation: 2020-09-24 11:17:19.117923\n",
-      "Elapsed time: 00:08:07\n",
-      "End exiton simulation: 2020-09-24 11:17:19.121581\n",
-      "Elapsed time: 01:30:42\n"
+      "Start of exiton simulation: 2020-10-04 11:03:09.325882\n",
+      "End exiton simulation: 2020-10-04 11:03:53.483791\n",
+      "Elapsed time: 00:00:44\n",
+      "End exiton simulation: 2020-10-04 11:03:53.488697\n",
+      "Elapsed time: 00:11:46\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "../CNT-SIM/CNTSimFile.py:574: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  self.QY_delta = (self.QY - self.QY_ref) / self.QY_ref\n"
      ]
     }
    ],
    "source": [
-    "exc_sim_rk_1.rate_const_dependence(10000, exciton_sim, constants_array, ['k_enr'],\n",
+    "exc_sim_ker_kbnr_diff_1.parameter_dependence(100000, exciton_sim, constants_array, ['k_er', 'k_bnr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})"
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 0, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_1.save()"
    ]
   },
   {
@@ -468,89 +473,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exc_sim_rk_1.save()"
+    "exc_sim_ker_kbnr_diff_2 = CNTSimFile('../sim_output/2020-10-04-exciton_sim-ker_kbnr_diff_defect_2.h5',\n",
+    "                                     kin_const_1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "exc_sim_rk_2 = CNTSimFile('../sim_output/2020-09-23-exciton_sim-rate-const_2.h5', kin_const_1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "constants_array[:, 0] = np.linspace(1e8, 1e9, 10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start of calculation: 2020-09-24 14:02:41.123801\n",
-      "Start of exiton simulation: 2020-09-24 14:02:41.124620\n",
-      "End exiton simulation: 2020-09-24 14:10:57.170516\n",
-      "Elapsed time: 00:08:16\n",
+      "Start of calculation: 2020-10-04 11:03:54.024012\n",
+      "Start of exiton simulation: 2020-10-04 11:03:54.024432\n",
+      "End exiton simulation: 2020-10-04 11:12:02.828708\n",
+      "Elapsed time: 00:08:08\n",
       "rate constant set processed((0/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:10:57.175489\n",
-      "End exiton simulation: 2020-09-24 14:19:19.189468\n",
-      "Elapsed time: 00:08:22\n",
+      "Start of exiton simulation: 2020-10-04 11:12:02.835162\n",
+      "End exiton simulation: 2020-10-04 11:20:16.860831\n",
+      "Elapsed time: 00:08:14\n",
       "rate constant set processed((1/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:19:19.190950\n",
-      "End exiton simulation: 2020-09-24 14:27:49.266804\n",
-      "Elapsed time: 00:08:30\n",
-      "rate constant set processed((2/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:27:49.270660\n",
-      "End exiton simulation: 2020-09-24 14:36:05.950057\n",
-      "Elapsed time: 00:08:16\n",
-      "rate constant set processed((3/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:36:05.953807\n",
-      "End exiton simulation: 2020-09-24 14:44:17.787515\n",
-      "Elapsed time: 00:08:11\n",
-      "rate constant set processed((4/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:44:17.791861\n",
-      "End exiton simulation: 2020-09-24 14:52:20.788519\n",
+      "Start of exiton simulation: 2020-10-04 11:20:16.865870\n",
+      "End exiton simulation: 2020-10-04 11:28:19.657163\n",
       "Elapsed time: 00:08:02\n",
+      "rate constant set processed((2/ 10))\n",
+      "Start of exiton simulation: 2020-10-04 11:28:19.659757\n",
+      "End exiton simulation: 2020-10-04 11:36:06.274779\n",
+      "Elapsed time: 00:07:46\n",
+      "rate constant set processed((3/ 10))\n",
+      "Start of exiton simulation: 2020-10-04 11:36:06.279892\n",
+      "End exiton simulation: 2020-10-04 11:43:37.825235\n",
+      "Elapsed time: 00:07:31\n",
+      "rate constant set processed((4/ 10))\n",
+      "Start of exiton simulation: 2020-10-04 11:43:37.827554\n",
+      "End exiton simulation: 2020-10-04 11:50:46.267492\n",
+      "Elapsed time: 00:07:08\n",
       "rate constant set processed((5/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 14:52:20.792601\n",
-      "End exiton simulation: 2020-09-24 15:00:22.304219\n",
-      "Elapsed time: 00:08:01\n",
+      "Start of exiton simulation: 2020-10-04 11:50:46.270038\n",
+      "End exiton simulation: 2020-10-04 11:57:40.549016\n",
+      "Elapsed time: 00:06:54\n",
       "rate constant set processed((6/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:00:22.308375\n",
-      "End exiton simulation: 2020-09-24 15:08:31.632582\n",
-      "Elapsed time: 00:08:09\n",
+      "Start of exiton simulation: 2020-10-04 11:57:40.551638\n",
+      "End exiton simulation: 2020-10-04 12:04:19.210640\n",
+      "Elapsed time: 00:06:38\n",
       "rate constant set processed((7/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:08:31.634025\n",
-      "End exiton simulation: 2020-09-24 15:16:36.436064\n",
-      "Elapsed time: 00:08:04\n",
+      "Start of exiton simulation: 2020-10-04 12:04:19.215461\n",
+      "End exiton simulation: 2020-10-04 12:10:38.113371\n",
+      "Elapsed time: 00:06:18\n",
       "rate constant set processed((8/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:16:36.437619\n",
-      "End exiton simulation: 2020-09-24 15:24:39.706434\n",
-      "Elapsed time: 00:08:03\n",
+      "Start of exiton simulation: 2020-10-04 12:10:38.115987\n",
+      "End exiton simulation: 2020-10-04 12:16:42.192689\n",
+      "Elapsed time: 00:06:04\n",
       "rate constant set processed((9/ 10))\n",
-      "Start of exiton simulation: 2020-09-24 15:24:39.707866\n",
-      "End exiton simulation: 2020-09-24 15:32:50.777309\n",
-      "Elapsed time: 00:08:11\n",
-      "End exiton simulation: 2020-09-24 15:32:50.778720\n",
-      "Elapsed time: 01:30:09\n"
+      "Start of exiton simulation: 2020-10-04 12:16:42.195380\n",
+      "End exiton simulation: 2020-10-04 12:22:35.817362\n",
+      "Elapsed time: 00:05:53\n",
+      "End exiton simulation: 2020-10-04 12:22:35.822173\n",
+      "Elapsed time: 01:18:41\n"
      ]
     }
    ],
    "source": [
-    "exc_sim_rk_2.rate_const_dependence(10000, exciton_sim, constants_array, ['k_enr'],\n",
+    "exc_sim_ker_kbnr_diff_2.parameter_dependence(10000, exciton_sim, constants_array, ['k_er', 'k_bnr'],\n",
     "                                   ['k_br', 'k_er', 'k_bnr', 'k_enr', 'k_be', 'k_ed', 'k_de', 'k_dnr'],\n",
-    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})"
+    "                                    diff_const, (1.07e15, 1.07e15/3),\n",
+    "                                   {'t_step': 1, 'r_exc_nm': 2, 'n_defects': 30, 'CNT_length': 750})\n",
+    "exc_sim_ker_kbnr_diff_2.save()"
    ]
   },
   {
